# pyverless

./: .gitignore  .releaserc.json  README.md  setup.cfg  setup.py
.github/workflows/: release.yml
examples/basic_function/: main.py  serverless.yml
examples/pyverless_modules/: framework.py  functions.py  main.py  resources.py  serverless.yml
examples/regional/: main.py  serverless.yml
pyverless/: __init__.py  gen.py
tests/: test_utils.py
