[metadata]
version=0.0.1

[flake8]
max-line-length = 88

[tool:pytest]
addopts = -rxXs
  --strict-config
  --strict-markers
xfail_strict=True
filterwarnings=
    # Turn warnings that aren't filtered into exceptions
    error
    # Workaround for Python 3.9.7 (see https://bugs.python.org/issue45097)
    ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10\.:DeprecationWarning:asyncio

[coverage:run]
omit = venv/*
include = pyverless/*, tests/*
plugins =
  coverage_conditional_plugin